fixed an alignment issue in the header, changed the sass line height variable values, and reworked the height of the title splashes

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -62,6 +62,9 @@
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
+
+    position: relative;
+    top: -0.25rem;
   }
 
   .sitenav-right {
