--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -54,10 +54,10 @@ $fontsizes: (
 };
 
 $lineheights: (
-  smaller: clamp(1rem, 1.2vw, 1.4rem),
-  regular: clamp(1.6rem, 2.2vw, 2.2rem),
-  large: clamp(2rem, 2.5vw, 2.5rem),
-  larger: clamp(2.2rem, 3vw, 3rem)
+  smaller: clamp(1.2rem, 1.2vw, 1.4rem),
+  regular: clamp(2rem, 2.4vw, 2.2rem),
+  large: clamp(2.4rem, 2.8vw, 2.6rem),
+  larger: clamp(3rem, 3.2vw, 3.2rem)
 );
 
 @function lheight($line-height) {
