--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,7 +82,7 @@ nav {
     list-style: none;
 
     li {
-      margin: 0.2rem 0.6rem;
+      margin: 0rem 0.6rem;
       padding: 0.2rem;
     }
   }
@@ -488,6 +488,7 @@ article {
     textarea {
       padding: 0.5rem 0.7rem;
       width: 700px;
+      min-width: 150px;
       max-width: 100%;
       height: 8rem;
       min-height: 4.5rem;
@@ -608,14 +609,14 @@ article {
 // TITLE SPLASH
 
 .title-splash {
-  height: 30vh;
+  min-height: 15vh;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 
   h1 {
-    margin: 0 2rem;
+    margin: 2.5rem 2rem;
     padding: pad(medium);
     text-align: center;
     text-transform: uppercase;
